feat: basic account management
* chore: update project structure referring workflow

* feat: add register flow and login including cookies set

* feat: add csrf middleware and authenticate

* finalizing csrf route

* feat: add outbox event with rabbitMq

* feat:generalize code resent event in service

* fix : rewrite csrf flow

* feat: add resendVerification and verify email or phone endpoint

* feat: add internal endpoint for token validation

* feat(docs): update openapi.yaml

* feat: add current user getter entrypoint

* feat(docs): update openapi spec

* feat: add last login date update every login and on user creation

* fix: resolve compilation error

* fix: separate authme with user service return statement

* feat: add sudo mode with verification code

* feat: implement phone and email change request and validation

* feat: add change password request path
